<resources>
    <string name="app_name">interfice1</string>
    <string name="about">About</string>
    <string name="new_player">New Player</string>
    <string name="preferencies">Preferencies</string>
    <string name="play">Play</string>
    <string name="play_juegos">Play Juegos</string>
    <string name="action_settings">Generos</string>
    <string name="action_search">Busqueda</string>
    <string name="action_add">Añadir</string>
    <string name="phonetic_name">Phonetic Name</string>
    <string name="generos">Generos :</string>
    <string name="accion">Accion</string>
    <string name="aventura">Aventura</string>
    <string name="fantasia">Fantasia</string>
    <string name="ciencia_ficcion">Ciencia-Ficcion</string>
    <string name="plataformas">Plataformas</string>
    <string name="name1">Alvaro</string>
    <string name="name2">Maria</string>
    <string name="name3">Marcos</string>
    <string name="name4">Juan</string>
    <string name="name5">Carlos</string>
    <string name="name6">Manolo</string>
    <string name="year1">1999</string>
    <string name="year2">555</string>
    <string name="year3">7435</string>
    <string name="year4">23</string>
    <string name="year5">2021</string>
    <string name="year6">345</string>
    <string name="futbol">Futbol</string>
    <string name="ciclismo">Ciclismo</string>
    <string name="beisbol">Beisbol</string>
    <string name="baloncesto">Baloncesto</string>
</resources>