<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/toolbar_layout"></include>

    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/play_juegos"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:cornerRadius="20dp"
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/play" />

        <com.google.android.material.button.MaterialButton

            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:cornerRadius="20dp"
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/new_player" />

        <com.google.android.material.button.MaterialButton

            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:cornerRadius="20dp"
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/preferencies" />

        <com.google.android.material.button.MaterialButton

            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:cornerRadius="20dp"
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/about" />
        </LinearLayout>

</LinearLayout>
